fix grid gap issue

--- a/src/sass/app_2/_common/base/common.scss
+++ b/src/sass/app_2/_common/base/common.scss
@@ -22,7 +22,6 @@ fieldset {
     border: 1px solid $COLOR_LIGHT_GRAY;
     position: relative;
     padding: 5px;
-    margin-bottom: 10px;
 }
 
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
