--- a/src/sass/app_2/_common/layout/layouts.scss
+++ b/src/sass/app_2/_common/layout/layouts.scss
@@ -63,6 +63,7 @@
                 }
             }
             .sidebar-container {
+                display: grid;
                 grid-column: col-start 11 / span 2;
                 grid-gap: 10px;
                 grid-template-rows: fit-content(40%) fit-content(40%) fit-content(40%) fit-content(40%);
